# gust

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-EXCEPTION  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yaml
demo/: package.json  pnpm-lock.yaml
demo/src/: four_winning.ts  main.ts  style.css
src/: game.rs  lib.rs  shot.rs
src/games/exact/: consts.rs  generate_game_board.rs  mod.rs
src/games/four_winning/: consts.rs  generate_game_board.rs  generate_win_combinations.rs  mod.rs
